test/shadowCapture3.slq
// args: --run

def main(){
	x:=H(0);
	def foo(){
		if measure(H(0)){
			return x;
		}else{
			def bar(x:ğ”¹){ /// error
				if measure(H(0)){
					return foo();
				}else{
					return foo();
				}
			}
			return bar(x);
		}
	}
}
